--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite build && vite preview --host --open"
   },
   "dependencies": {
-    "@fontsource/roboto": "^5.0.12",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@mui/styled-engine-sc": "6.0.0-alpha.18",
+    "@mui/x-date-pickers": "^6.19.8",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.22.3",
@@ -28,7 +31,6 @@
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "mockjs": "^1.1.0",
-    "unplugin-auto-import": "^0.17.5",
     "vite": "^5.1.6",
     "vite-plugin-inspect": "^0.8.3"
   }
