--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^6.1.8",
     "web-vitals": "^3.5.2",
     "zustand": "^4.5.2"
